	12111,Wrapped_Food: gets 3 of any food<- food or mixed food? Need to know so it can be implemented. [Skotlex]
	4198,Maya_Purple_Card: intravision not working atm
	4296,Cramp_Card: Temporal Plug: 10z per mob-level on a 3% chance.
	1771,Venom_Knife: For new Asassins skill
		Item type: Throwing Dagger. Has to be equipped as an arrow, is consumed
		like gemstones when the skill is used.
	--

10/06
	* Added skill data for various skills (second class quest skills and
	  several Tae-Kwon related jobs. All the info was acquired by Draco from
	  jA's information. [Skotlex]
	* Made Spiral Pierce non-interruptable. [Skotlex]
	* Implemented 4198,Maya_Purple_Card effect. Thanks to jA team! [Lupus]
	- There's a special Intravision timer also. So that "Box to see hidden mobs" could be implemented now
10/05
	* Updated new items from kRO. Thanks to Landarma. [Nexon]
	* Fixed 2 Mobs, thanks to MasterOfMuppets [Nexon]
	* Added back Grandcross's 20% HP cost. [Skotlex]
	* Updated Grandcross's Casting time, and Blast Mine's duration. [Skotlex]
	* Updated meltdown's cast time to 0.5 at lv1, 1.0 secs at lv 10. Still
	  unconfirmed, but it's much more likely than the alleged 0.05~0.10secs.
	  [Skotlex]
	* Updated #2415,Bunny_Slippers. Thanx to noobs [Lupus]
10/04
	* Fixed some items with wrong weight/ stats. Thanks to mrmagoo [Nexon]
	* Changed Savage Babe Card and Savage Babe to Savage Bebe Card and Savage Bebe. [Nexon]
	* Removed the flags from Spider Web, now it can be stacked and placed
	  underneath characters. [Skotlex]
10/03
	* Updated Thanatos/Abyss monster info. Still in need of stats. [Nexon]
	* Updated the skill info on NPC_DARKCROSS [Skotlex]
	* Updated Lighthalzen mobs and mob skills as per Master of Puppets provided
	  info. [Skotlex]
	* Updated Ygnizem's slaves to be the other 5 first classes. [Skotlex]
10/02
	* PVP drop item - 7420 Skull... costs 0z. Replaced exploitable bone drop with skull drop [Lupus]