@@ -2,6 +2,10 @@ Date	Added
 =======
 
 10/06
+	* Made Guild Recall be usable outside of WoE. [Skotlex]
+	* Changed the default gvg_traps_target_all to yes. [Skotlex]
+	* Changed the default for copyskill_restrict to 2 (cannot copy advanced
+	  skills) [Skotlex]
 	* Added a bunch of code related to the 2nd job quest skills and Tae -second
 	  classes skills, as provided by Draco and acquired from jA [Skotlex]
 	* Merged Draco's implementation of battle_calc_magic_attack. [Skotlex]
