@@ -669,8 +669,8 @@ gvg_misc_attack_damage_rate: 60
 gvg_flee_penalty: 20
 
 // Should traps (hunter traps + quagmire) change their target to "all" inside gvg grounds? (Note 1)
-// kRO = no (yes, it used to be YES some time ago), iRO = yes
-gvg_traps_target_all: no
+// Default on official servers: yes
+gvg_traps_target_all: yes
 
 // When the emperium is broken with WoE mode on, How Long Before The 
 // Declaration Of Castle Owner and Removal of Monsters/Players from 
@@ -1029,7 +1029,8 @@ ignore_items_gender: yes
 // 0 = no restriction
 // 1 = only stalker may plagiarize advanced skills       
 // 2 = advanced skills cannot be plagiarized by anyone  
-copyskill_restrict: 0
+// Official servers setting: 2
+copyskill_restrict: 2
 
 // Does Berserk/Frenzy cancel other self-buffs when used?
 berserk_cancels_buffs: no
